* Make fuse.dom.Element setStyle() method avoid throwing errors when passing falsy values. [Prototype LH #558] [garrett, jddalton]

* Make fuse.dom.Element setStyle() method support hyphenated style properties. [Prototype LH #970] [jddalton, zeno]

* Fix fuse.Fusebox wrappers for Number methods toExponential(), toFixed(), and toPrecision(). [jddalton]

* Add `fractionDigits` argument to fuse.Number#round. [Prototype LH #830] [jddalton, Radoslav Stankov]

* Ensure fuse.Fusebox Native methods that return arrays set index values in accending order so de facto order is preserved in for-in loops. [jddalton]

* Rename the fuse.dom.Data object to fuse.dom.data. [jddalton]

* Avoid calling decorator instance method focus() in Form focusFirstControl(). [Diego Perini, jddalton]

* Make fuse.dom.InputElement.EventObserver registerCallback() method use fuse.get() to resolve the `element` argument. [jddalton]

* Rename Form methods getElements() to getControls(), findFirstElement() to getFirstControl(), and focusFirstElement() to focusFirstControl(). [jddalton]
  Note: Backwards compatibility warning.

* Cleanup and optimize form/field files and ensure the getValue/setValue methods are consistent across form control elements. [jddalton]

* Add UA sniff to the fuse.env.agent.IE flag to avoid cases where others have added a window.attachEvent method. [Prototype LH #997] [jddalton, PaulC]

* Refactor codebase to use dom attributes/properties correctly and make a clearer distinction between dom attributes and properties. [David Mark, jddalton]

* Add fuse.dom.Element#removeAttribute method. [jddalton, Joe Gornick]

* Optimize fuse.Function methods by removing `arg` variable aliases of the arguments object. [Andrea Giammarchi, jddalton]

* Make fuse.Function.bind() throw a TypeError if `fn` argument is not a function and refactor native bind branch. [jddalton]
