@@ -145,6 +145,7 @@
 <div id="style_test_3">blah</div>
 <span id="style_test_4">blah</span>
 <span id="style_test_5">blah</span>
+<span id="style_test_6">blah</span>
 
 <div id="style_test_dimensions_container">
   <div id="style_test_dimensions" style="background:#ddd;padding:1px;margin:1px;border:1px solid #00f"><div style="height:5px;background:#eee;width:5px;padding:2px;margin:2px;border:2px solid #0f0"> </div>
